@@ -6,6 +6,7 @@ build_requires:
   English: 0
   Error::Pure::Utils: 0
   ExtUtils::MakeMaker: 6.59
+  Readonly: 0
   Test::MockObject: 0
   Test::More: 0
   Test::NoWarnings: 0
