@@ -28,6 +28,7 @@ resources 'homepage' => 'https://github.com/michal-josef-spacek/Mo-utils';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Mo-utils';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0;
+test_requires 'Readonly' => 0;
 test_requires 'Test::MockObject' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
