@@ -4,8 +4,8 @@ NAME
 SYNOPSIS
      use Mo::utils qw(check_angle check_array check_array_object check_array_required
              check_bool check_code check_isa check_length check_length_fix check_number
-             check_number_min check_number_of_items check_number_range check_regexp
-             check_required check_string check_string_begin check_strings);
+             check_number_id check_number_min check_number_of_items check_number_range
+             check_regexp check_required check_string check_string_begin check_strings);
 
      check_angle($self, $key);
      check_array($self, $key);
@@ -17,6 +17,7 @@ SYNOPSIS
      check_length($self, $key, $max_length);
      check_length_fix($self, $key, $length);
      check_number($self, $key);
+     check_number_id($self, $key);
      check_number_min($self, $key, $min);
      check_number_of_items($self, $list_method, $item_method, $object_name, $item_name);
      check_number_range($self, $key, $min, $max);
@@ -141,6 +142,19 @@ SUBROUTINES
 
     Check parameter defined by $key which is number (positive or negative)
     or no. Number could be integer, float, exponencial and negative.
+
+    Put error if check isn't ok.
+
+    Returns undef.
+
+  "check_number_id"
+     check_number_id($self, $key);
+
+    *Since version 0.28.*
+
+    Check parameter defined by $key which is number which could be used as
+    id in computer systems. This number is a natural number beginning from 1
+    (1, 2, 3, …).
 
     Put error if check isn't ok.
 
@@ -292,6 +306,10 @@ ERRORS
 
      check_number():
              Parameter '%s' must be a number.
+                     Value: %s
+
+     check_nuber_id():
+             Parameter '%s' must be a natural number.
                      Value: %s
 
      check_number_min():
@@ -718,6 +736,42 @@ EXAMPLE21
      use strict;
      use warnings;
 
+     use Mo::utils qw(check_number_id);
+
+     my $self = {
+             'key' => '10',
+     };
+     check_number_id($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output:
+     # ok
+
+EXAMPLE22
+     use strict;
+     use warnings;
+
+     $Error::Pure::TYPE = 'Error';
+
+     use Mo::utils qw(check_number_id);
+
+     my $self = {
+             'key' => 0,
+     };
+     check_number_id($self, 'key');
+
+     # Print out.
+     print "ok\n";
+
+     # Output like:
+     # #Error [...utils.pm:?] Parameter 'key' must be a natural number.
+
+EXAMPLE23
+     use strict;
+     use warnings;
+
      use Mo::utils qw(check_number_min);
 
      my $self = {
@@ -731,7 +785,7 @@ EXAMPLE21
      # Output:
      # ok
 
-EXAMPLE22
+EXAMPLE24
      use strict;
      use warnings;
 
@@ -750,7 +804,7 @@ EXAMPLE22
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be greater than 11.
 
-EXAMPLE23
+EXAMPLE25
      use strict;
      use warnings;
 
@@ -792,7 +846,7 @@ EXAMPLE23
      # Output like:
      # ok
 
-EXAMPLE24
+EXAMPLE26
      use strict;
      use warnings;
 
@@ -834,7 +888,7 @@ EXAMPLE24
      # Output like:
      # #Error [...utils.pm:?] Test for Item 'value1' has multiple values.
 
-EXAMPLE25
+EXAMPLE27
      use strict;
      use warnings;
 
@@ -851,7 +905,7 @@ EXAMPLE25
      # Output:
      # ok
 
-EXAMPLE26
+EXAMPLE28
      use strict;
      use warnings;
 
@@ -870,7 +924,7 @@ EXAMPLE26
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must be a number between 10 and 12.
 
-EXAMPLE27
+EXAMPLE29
      use strict;
      use warnings;
 
@@ -887,7 +941,7 @@ EXAMPLE27
      # Output:
      # ok
 
-EXAMPLE28
+EXAMPLE30
      use strict;
      use warnings;
 
@@ -907,7 +961,7 @@ EXAMPLE28
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' does not match the specified regular expression.
 
-EXAMPLE29
+EXAMPLE31
      use strict;
      use warnings;
 
@@ -924,7 +978,7 @@ EXAMPLE29
      # Output:
      # ok
 
-EXAMPLE30
+EXAMPLE32
      use strict;
      use warnings;
 
@@ -944,7 +998,7 @@ EXAMPLE30
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' is required.
 
-EXAMPLE31
+EXAMPLE33
      use strict;
      use warnings;
 
@@ -961,7 +1015,7 @@ EXAMPLE31
      # Output:
      # ok
 
-EXAMPLE32
+EXAMPLE34
      use strict;
      use warnings;
 
@@ -981,7 +1035,7 @@ EXAMPLE32
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' have expected value.
 
-EXAMPLE33
+EXAMPLE35
      use strict;
      use warnings;
 
@@ -998,7 +1052,7 @@ EXAMPLE33
      # Output:
      # ok
 
-EXAMPLE34
+EXAMPLE36
      use strict;
      use warnings;
 
@@ -1018,7 +1072,7 @@ EXAMPLE34
      # Output like:
      # #Error [...utils.pm:?] Parameter 'key' must begin with defined string base.
 
-EXAMPLE35
+EXAMPLE37
      use strict;
      use warnings;
 
@@ -1035,7 +1089,7 @@ EXAMPLE35
      # Output:
      # ok
 
-EXAMPLE36
+EXAMPLE38
      use strict;
      use warnings;
 
