@@ -1,0 +1,19 @@
+#!/usr/bin/env perl
+
+use strict;
+use warnings;
+
+$Error::Pure::TYPE = 'Error';
+
+use Mo::utils qw(check_number_id);
+
+my $self = {
+        'key' => 0,
+};
+check_number_id($self, 'key');
+
+# Print out.
+print "ok\n";
+
+# Output like:
+# #Error [...utils.pm:?] Parameter 'key' must be a natural number.
