@@ -1,4 +1,5 @@
 0.28
+ - Add check_number_id().
 
 0.27 2024-05-17T09:47:11+02:00
  - Fix typo in doc.
